--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,1 +1,324 @@
+html {
+    /*задаем шрифт всему сайту*/
+    font-family: Arial, Helvetica, sans-serif;
+}
 
+body {
+    /*устанавалиаем вертикальное отображение элементов в главном блоке страницы*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.navbar {
+    /*задаем навигационной панели ширину, цвет фона, скругляем углы и задаем горизонтальное отображение с отступами между элементами*/
+    background: #f4f4f4;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1055px;
+}
+
+
+.navbar-links {
+    /*задаем блоку со ссылками отступы в 30пикселей между элементами и горизонтальное отображение*/
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.navbar-link {
+    /*размещаем ссылки по центру блока, убираем подчеркивание, задаем черный цвет текста и задаем внутренние отступы*/
+    line-height: 70px;
+    padding: 20px;
+
+}
+
+.navbar-link a {
+    color: black;
+    text-decoration: none;
+}
+
+.navbar-link a:hover {
+    /*при наведении на ссылку ее цвет меняется на красный и курсор из стрелки превращается в указатель*/
+    color: red;
+    cursor: pointer;
+}
+
+.navbar-img {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.navbar-img img {
+    /*полностью помещаем изображение в блок*/
+    width: 100%;
+}
+
+.active a {
+    /*задаем красный цвет активному элементу*/
+    color: red;
+}
+
+.active::after {
+    /*добавляем красную линию после активного элемента*/
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: relative;
+    margin-left: 0px;
+    bottom: 20px;
+    background-color: red;
+    display: block;
+}
+
+main {
+    gap: 20px;
+    background: #f4f4f4;
+    width: 70%;
+    border-radius: 20px;
+    padding: 20px;
+    width: 1019px;
+}
+
+html {
+    /*задаем шрифт всему сайту*/
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    /*устанавалиаем вертикальное отображение элементов в главном блоке страницы*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.navbar {
+    /*задаем навигационной панели ширину, цвет фона, скругляем углы и задаем горизонтальное отображение с отступами между элементами*/
+    background: #f4f4f4;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1055px;
+}
+
+
+.navbar-links {
+    /*задаем блоку со ссылками отступы в 30пикселей между элементами и горизонтальное отображение*/
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.navbar-link {
+    /*размещаем ссылки по центру блока, убираем подчеркивание, задаем черный цвет текста и задаем внутренние отступы*/
+    line-height: 70px;
+    padding: 20px;
+
+}
+
+.navbar-link a {
+    color: black;
+    text-decoration: none;
+}
+
+.navbar-link a:hover {
+    /*при наведении на ссылку ее цвет меняется на красный и курсор из стрелки превращается в указатель*/
+    color: red;
+    cursor: pointer;
+}
+
+.navbar-img {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.navbar-img img {
+    /*полностью помещаем изображение в блок*/
+    width: 100%;
+}
+
+.active a {
+    /*задаем красный цвет активному элементу*/
+    color: red;
+}
+
+.active::after {
+    /*добавляем красную линию после активного элемента*/
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: relative;
+    bottom: 20px;
+    margin-left: 0px;
+    background-color: red;
+    display: block;
+}
+
+main {
+    gap: 20px;
+    background: #f4f4f4;
+    width: 70%;
+    border-radius: 20px;
+    padding: 20px;
+    width: 1019px;
+}
+
+html {
+    /*задаем шрифт всему сайту*/
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+    /*устанавалиаем вертикальное отображение элементов в главном блоке страницы*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.navbar {
+    /*задаем навигационной панели ширину, цвет фона, скругляем углы и задаем горизонтальное отображение с отступами между элементами*/
+    background: #f4f4f4;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 1055px;
+}
+
+
+.navbar-links {
+    /*задаем блоку со ссылками отступы в 30пикселей между элементами и горизонтальное отображение*/
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.navbar-link {
+    /*размещаем ссылки по центру блока, убираем подчеркивание, задаем черный цвет текста и задаем внутренние отступы*/
+    line-height: 70px;
+    padding: 20px;
+
+}
+
+.navbar-link a {
+    color: black;
+    text-decoration: none;
+}
+
+.navbar-link a:hover {
+    /*при наведении на ссылку ее цвет меняется на красный и курсор из стрелки превращается в указатель*/
+    color: red;
+    cursor: pointer;
+}
+
+.navbar-img {
+    width: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.navbar-img img {
+    /*полностью помещаем изображение в блок*/
+    width: 100%;
+}
+
+.active a {
+    /*задаем красный цвет активному элементу*/
+    color: red;
+}
+
+.active::after {
+    /*добавляем красную линию после активного элемента*/
+    content: '';
+    width: 100%;
+    height: 2px;
+    position: relative;
+    bottom: 20px;
+    margin-left: 0px;
+    background-color: red;
+    display: block;
+}
+
+main {
+    gap: 20px;
+    background: #f4f4f4;
+    width: 70%;
+    border-radius: 20px;
+    padding: 20px;
+    width: 1019px;
+}
+
+.headerText {
+    border: salmon 1px solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.headerText h1 {
+    text-align: center;
+    padding: 20px 0px 20px 0px;
+    margin: 0px;
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    background-color: salmon;
+}
+
+.partText {
+    width: 100%;
+    border: aqua 1px solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.partText h1 {
+    text-align: center;
+    padding: 20px 0px 20px 0px;
+    margin: 0px;
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    background-color: aqua;
+}
+
+.roleText {
+    width: 100%;
+    border: brown 1px solid;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.roleText h1 {
+    text-align: center;
+    padding: 20px 0px 20px 0px;
+    margin: 0px;
+    border-radius: 20px 20px 0px 0px;
+    width: 100%;
+    background-color: brown;
+}
+
+.headerText p {
+    padding: 20px;
+}
+
+.mainHeader {
+    gap: 20px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
